frontend/test/should_pass/incidentadjacent3.grg
::g_n:Node;
-::g_e:Edge->;
::g_m:Node;

rule t
{
	n:Node -e:Edge-> m:Node;

	if { incident(::g_n, Edge, Node).size()!=0 && incoming(::g_n, Edge, Node).size()!=0 && outgoing(::g_n, Edge, Node).size()!=0; }
	if { incident(n, Edge, Node).size()!=0 && incoming(n, Edge, Node).size()!=0 && outgoing(n, Edge, Node).size()!=0; }
	if { adjacent(::g_n, Edge, Node).size()!=0 && adjacentIncoming(::g_n, Edge, Node).size()!=0 && adjacentOutgoing(::g_n, Edge, Node).size()!=0; }
	if { adjacent(n, Edge, Node).size()!=0 && adjacentIncoming(n, Edge, Node).size()!=0 && adjacentOutgoing(n, Edge, Node).size()!=0; }

	if { isIncident(::g_n, ::g_e, Edge, Node) && isIncoming(::g_n, ::g_e, Edge, Node) && isOutgoing(::g_n, ::g_e, Edge, Node); }
	if { isIncident(n, e, Edge, Node) && isIncoming(n, e, Edge, Node) && isOutgoing(n, e, Edge, Node); }
	if { isAdjacent(::g_n, ::g_m, Edge, Node) && isAdjacentIncoming(::g_n, ::g_m, Edge, Node) && isAdjacentOutgoing(::g_n, ::g_m, Edge, Node); }
	if { isAdjacent(n, m, Edge, Node) && isAdjacentIncoming(n, m, Edge, Node) && isAdjacentOutgoing(n, m, Edge, Node); }
	
	modify {
		def var res:boolean;
		
		eval { yield res = incident(::g_n, Edge, Node).size()!=0 && incoming(::g_n, Edge, Node).size()!=0 && outgoing(::g_n, Edge, Node).size()!=0; }
		eval { yield res = incident(n, Edge, Node).size()!=0 && incoming(n, Edge, Node).size()!=0 && outgoing(n, Edge, Node).size()!=0; }
		eval { yield res = adjacent(::g_n, Edge, Node).size()!=0 && adjacentIncoming(::g_n, Edge, Node).size()!=0 && adjacentOutgoing(::g_n, Edge, Node).size()!=0; }
		eval { yield res = adjacent(n, Edge, Node).size()!=0 && adjacentIncoming(n, Edge, Node).size()!=0 && adjacentOutgoing(n, Edge, Node).size()!=0; }

		eval { yield res = isIncident(::g_n, ::g_e, Edge, Node) && isIncoming(::g_n, ::g_e, Edge, Node) && isOutgoing(::g_n, ::g_e, Edge, Node); }
		eval { yield res = isIncident(n, e, Edge, Node) && isIncoming(n, e, Edge, Node) && isOutgoing(n, e, Edge, Node); }
		eval { yield res = isAdjacent(::g_n, ::g_m, Edge, Node) && isAdjacentIncoming(::g_n, ::g_m, Edge, Node) && isAdjacentOutgoing(::g_n, ::g_m, Edge, Node); }
		eval { yield res = isAdjacent(n, m, Edge, Node) && isAdjacentIncoming(n, m, Edge, Node) && isAdjacentOutgoing(n, m, Edge, Node); }
		
/*
		exec ( { res = incident(::g_n, Edge, Node).size()!=0 && incoming(::g_n, Edge, Node).size()!=0 && outgoing(::g_n, Edge, Node).size()!=0; } )
		exec ( { res = incident(n, Edge, Node).size()!=0 && incoming(n, Edge, Node).size()!=0 && outgoing(n, Edge, Node).size()!=0; } )
		exec ( { res = adjacent(::g_n, Edge, Node).size()!=0 && adjacentIncoming(::g_n, Edge, Node).size()!=0 && adjacentOutgoing(::g_n, Edge, Node).size()!=0; } )
		exec ( { res = adjacent(n, Edge, Node).size()!=0 && adjacentIncoming(n, Edge, Node).size()!=0 && adjacentOutgoing(n, Edge, Node).size()!=0; } )
		
		exec ( { res = isIncident(::g_n, ::g_e, Edge, Node) && isIncoming(::g_n, ::g_e, Edge, Node) && isOutgoing(::g_n, ::g_e, Edge, Node); } )
		exec ( { res = isIncident(n, e, Edge, Node) && isIncoming(n, e, Edge, Node) && isOutgoing(n, e, Edge, Node); } )
		exec ( { res = isAdjacent(::g_n, ::g_m, Edge, Node) && isAdjacentIncoming(::g_n, ::g_m, Edge, Node) && isAdjacentOutgoing(::g_n, ::g_m, Edge, Node); } )
		exec ( { res = isAdjacent(n, m, Edge, Node) && isAdjacentIncoming(n, m, Edge, Node) && isAdjacentOutgoing(n, m, Edge, Node); } )
*/
	}
}
